--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
 target/
+instantclient_11_2/
+jboss-as-7.1.0.Final.zip
+jboss-as-7.1.0.Final/
+jbossesb-4.9.zip
+jbossesb-4.9/
+.classpath
+.settings/
+.project
