--- a/jatmibroker-xatmi/pom.xml
+++ b/jatmibroker-xatmi/pom.xml
@@ -130,6 +130,17 @@
             </plugin>
         </plugins>
     </build>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.jboss.as</groupId>
+                <artifactId>jboss-as-parent</artifactId>
+                <version>7.1.0.Final</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
     <dependencies>
         <!-- REQUIRED FOR AIX TO GET JAXP-RI -->
         <!--
@@ -141,8 +152,29 @@
 		-->
         <!-- END OF AIX REQUIREMENT -->
         <dependency>
+            <groupId>org.jboss.spec.javax.transaction</groupId>
+            <artifactId>jboss-transaction-api_1.1_spec</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>org.jboss.jbossts</groupId>
             <artifactId>jbossjts</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>jacorb</groupId>
+            <artifactId>jacorb</artifactId>
+            <scope>provided</scope>
+            <version>2.3.1jboss.patch01-brew</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -151,8 +183,8 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.jboss.narayana.blacktie</groupId>
-            <artifactId>stompconnectservice</artifactId>
+            <groupId>org.codehaus.stomp</groupId>
+            <artifactId>stompconnect</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
