--- a/quickstarts/integration1/xatmi_adapter/pom.xml
+++ b/quickstarts/integration1/xatmi_adapter/pom.xml
@@ -77,6 +77,17 @@
     </repositories>
     <build>
         <plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifestEntries>
+							<Dependencies>org.jboss.jts</Dependencies>
+						</manifestEntries>
+					</archive>
+				</configuration>
+			</plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-ejb-plugin</artifactId>
