--- a/quickstarts/integration1/xatmi_adapter/ear/pom.xml
+++ b/quickstarts/integration1/xatmi_adapter/ear/pom.xml
@@ -81,11 +81,13 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-ear-plugin</artifactId>
                 <configuration>
+					<defaultJavaBundleDir>lib</defaultJavaBundleDir>
                     <modules>
                         <jarModule>
                             <groupId>org.jboss.narayana.blacktie.quickstarts</groupId>
                             <artifactId>integration1-xatmi_adapter</artifactId>
                             <includeInApplicationXml>true</includeInApplicationXml>
+							<bundleDir>/</bundleDir>
                         </jarModule>
                     </modules>
                 </configuration>
