ignore some window build artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,9 @@ jbossesb-4.9/
 bin
 include
 lib
+
+
+build.log
+instantclient-basiclite-win32-11.2.0.1.0.zip
+instantclient-sdk-win32-11.2.0.1.0.zip
+tnsnames.ora
