--- a/quickstarts/integration1/xatmi_adapter/pom.xml
+++ b/quickstarts/integration1/xatmi_adapter/pom.xml
@@ -20,7 +20,7 @@
     <groupId>org.jboss.narayana.blacktie.quickstarts</groupId>
     <artifactId>integration1-xatmi_adapter</artifactId>
     <version>5.0.0.M2-SNAPSHOT</version>
-    <packaging>ejb</packaging>
+    <packaging>jar</packaging>
     <name>Integration 1 - Quickstart XATMI Adapter</name>
     <description>A BlackTie component</description>
     <developers>
@@ -75,6 +75,18 @@
             </releases>
         </repository>
     </repositories>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.jboss.as</groupId>
+                <artifactId>jboss-as-parent</artifactId>
+                <version>7.1.0.Final</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <build>
         <plugins>
 			<plugin>
@@ -111,6 +123,11 @@
             <version>5.0.0.M2-SNAPSHOT</version>
             <classifier>client</classifier>
         </dependency>
+		<dependency>
+			<groupId>org.jboss.spec.javax.ejb</groupId>
+			<artifactId>jboss-ejb-api_3.1_spec</artifactId>
+			<scope>provided</scope>
+		</dependency>
         <dependency>
             <groupId>org.jboss.narayana.blacktie</groupId>
             <artifactId>jatmibroker-xatmi</artifactId>
