Updated to provide the btconfig.xml in the ear and to correct the ears artifact name

--- a/pom.xml
+++ b/pom.xml
@@ -189,7 +189,7 @@
             </dependency>
             <dependency>
                 <groupId>org.jboss.narayana.blacktie</groupId>
-                <artifactId>blacktie-admin-services</artifactId>
+                <artifactId>blacktie-admin-services-ear</artifactId>
                 <type>ear</type>
                 <version>${project.version}</version>
             </dependency>
