--- a/blacktie/pom.xml
+++ b/blacktie/pom.xml
@@ -212,7 +212,7 @@
         </dependency>
         <dependency>
             <groupId>org.jboss.narayana.blacktie</groupId>
-            <artifactId>blacktie-admin-services</artifactId>
+            <artifactId>blacktie-admin-services-ear</artifactId>
             <type>ear</type>
         </dependency>
         <dependency>
