Added back the MDB quickstart

--- a/jatmibroker-xatmi/src/quickstart/mdb/pom.xml
+++ b/jatmibroker-xatmi/src/quickstart/mdb/pom.xml
@@ -101,6 +101,13 @@
 			<artifactId>slf4j-api</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		<!-- Import the CDI API, we use provided scope as the API is included in 
+			JBoss AS 7 -->
+		<dependency>
+			<groupId>javax.enterprise</groupId>
+			<artifactId>cdi-api</artifactId>
+			<scope>provided</scope>
+		</dependency>
 		<!-- Test -->
 		<dependency>
 			<groupId>junit</groupId>
